<resources>
    <string name="app_name">PI Loop</string>
    <string name="pi_benchmark_name">PI calculus</string>
    <string name="primes_benchmark_name">Primes calculus</string>
    <string name="steps_text">Edit number of steps</string>
    <string name="calculate_button">Calculate PI</string>
    <string name="java_checkbox">Java</string>
    <string name="cpp_checkbox">C++</string>
    <string name="pi_label">PI:</string>
    <string name="primes_text">Edit number</string>
    <string name="primes_calculate_button">Calculate primes</string>
    <string name="primes_label">Number of primes:</string>
    <string name="time_label">C++ Time (Chrono):</string>
    <string name="time2_label">C++ Time:</string>
    <string name="time3_label">Java Time:</string>
    <string name="threads_spinner_title">Threads</string>
    <string name="not_available">N/A</string>
</resources>
