<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.ttlab.piloopapp.MainActivity">

    <EditText
        android:id="@+id/stepsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/steps_text"
        android:inputType="textPersonName"
        android:text="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="calculatePI"
        android:text="@string/calculate_button"
        app:layout_constraintLeft_toRightOf="@+id/stepsEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/PiLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pi_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsEditText"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/ChronoTimeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PiLabelTextView" />

    <TextView
        android:id="@+id/CppTimeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/time2_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChronoTimeLabelTextView" />

    <TextView
        android:id="@+id/JavaTimeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/time3_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CppTimeLabelTextView"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/PiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/PiLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/stepsEditText"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/ChronoTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/ChronoTimeLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/PiTextView" />

    <TextView
        android:id="@+id/CppTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/CppTimeLabelTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/CppTimeLabelTextView"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/JavaTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/JavaTimeLabelTextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/JavaTimeLabelTextView"
        android:layout_marginStart="8dp" />

    <CheckBox
        android:id="@+id/cppCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpp_checkbox"
        app:layout_constraintBaseline_toBaselineOf="@+id/CppTimeLabelTextView"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="150dp" />

    <CheckBox
        android:id="@+id/javaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_checkbox"
        app:layout_constraintBaseline_toBaselineOf="@+id/JavaTimeLabelTextView"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="150dp" />

    <Spinner
        android:id="@+id/coresSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/button" />" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threads_spinner_title"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toRightOf="@+id/cppCheckBox"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cppCheckBox" />
</android.support.constraint.ConstraintLayout>
